results of LC review